# jakson

./: .gitignore  AUTHORS.md  CMakeCache.txt  CMakeLists.txt  CODE-OWNERS  CONTRIBUTING.md  CTestTestfile.cmake  DONORS.md  Doxyfile  FOR_RESEARCHERS.md  INSTALL.md  ISSUE_TEMPLATE.md  LICENSE  Makefile  NEWS.md  README.md  SCHEMA_SPECIFICATION.md  SPECIFICATION-COMPACT.md  SPECIFICATION.md  SPECIFICATION_COMPACT.md  VERSION_CURRENT  VERSION_RELEASED  cmake_install.cmake  comparison.r  contribution.md  debug.sh  descent.r  main.c  main_simd_test.c  ng5.cbp  somefile.sql.in  statistics.csv
.github/: FUNDING.yml
assets/: jakson-logo-new.afdesign  jakson-logo.afdesign  wire.blend
benches/: CMakeLists.txt  bench-bucket-putget-bsearch.c  bench-bucket-putget-scan-1-cache.c  bench-bucket-putget-scan-1-parallel.c  bench-bucket-putget-scan-1.c  bench-bucket-putget-scan-2-cache.c  bench-bucket-putget-scan-2.c  bench-bucket-putget-scan-3-cache.c  bench-bucket-putget-scan-3.c  bench-bucket-putget-scan-4-cache.c  bench-bucket-putget-scan-4.c
benches/baseline/: compare_cpp_dic.cpp
benches/index/crack/: main.c
benches/mem/pools/: main.c
benches/mem/pools/r-scripts/: compare-magic-vs-trivial.r  magic-memory-pool-performance.r  plot-performance.r  show-overhead-mempool-vs-clib.r
book/: README.md
cmake/modules/: FindAPR.cmake  FindCheck.cmake
costfunction/: README.md
docs/: archive-spec.html  carbon.html  dev-ressources.html  feedback.html  format-spec.html  formatting.html  getting-started.html  index.html  indexing.html  introduction.html  libcarbon.html  print.html  searcher.js  searchindex.js  thanks.html  traversals-queries.html  update-spec.html
docs/dev-ressources/: best-practise.html  example-files.html  libraries.html
docs/format-specs/: alternatives.html  container-types.html  data-types.html  design-goals.html  format-overview.html  identification.html  mime-types.html  notation.html
examples/: CMakeLists.txt  Makefile  cmake_install.cmake  example_schema.carbon  example_schema.json  examples-error.c
examples/bison/: CMakeLists.txt  doc-create-number-column.cpp  doc-create-string-list.cpp
examples/carbon-api/: CMakeLists.txt
examples/carbon-api/browse-contents/: CMakeLists.txt  read-record-contents.c
examples/carbon-api/construct-carbon-records/: CMakeLists.txt
examples/carbon-api/construct-carbon-records/from-json/: CMakeLists.txt  from-json.c
examples/carbon-api/construct-carbon-records/manual-construction/: CMakeLists.txt  manual-construction-arrays.c  manual-construction-columns.c  manual-construction-non-empty.c  manual-construction-objects.c  manual-construction.c
examples/carbon-api/project-setup/: CMakeLists.txt  hello-carbon.c
include/: common.h  ng5_common.h  ng5_static_conf.h  ng5_status.h  status.h
misc/: CMakeLists.txt  INSTALL_GTEST.md  playground.c
ng5/: allocator.c  ng5_result_handle.c  result_handle.c  strings.c
sbin/: cmake_cleanup.sh  eval_scan_alternatives.sh
src/: alloc.c  alloc.h  alloc_tracer.c  alloc_tracer.h  bitmap.c  bitmap.h  bloomfilter.c  bloomfilter.h  carbon-containers.h  carbon-markers.h  carbon_abstract.c  carbon_abstract.h  chunkreader.c  chunkreader.h  common.h  config_static.h  descent.c  descent.h  hash.h  information.c  information.h  jak_alloc.c  jak_alloc.h  jak_alloc_trace.c  jak_alloc_trace.h  jak_archive.c  jak_archive.h  jak_archive_cache.c  jak_archive_cache.h  jak_archive_converter.c  jak_archive_converter.h  jak_archive_int.c  jak_archive_int.h  jak_archive_io.c  jak_archive_io.h  jak_archive_it.c  jak_archive_it.h  jak_archive_pred.h  jak_archive_query.c  jak_archive_query.h  (+177 more)
src-cat/: jakson.c  jakson.h
stdx/: allocator.c  async.c  ng5_allocator.c  ng5_bitset.c  ng5_bloomfilter.c  ng5_slice_list.c  ng5_slot_vector.c  ng5_spinlock.c  ng5_string_dic_async.c  ng5_string_dic_sync.c  ng5_string_map_smart.c  ng5_time.c  ng5_trace_alloc.c  ng5_vector.c  slot_vector.c  string_id_map.c  time.c  vector.c
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.c  test-archive-converter.cpp  test-archive-iter.cpp  test-archive-ops.cpp  test-archive-visitor.cpp  test-auto-compressor.cpp  test-bison.cpp  test-constants.h.in  test-data_ptr.cpp  test-fix-map.cpp  test-histogram.cpp  test-mempools.cpp  test-mime.cpp  test-oid.cpp  test-rule-selector.cpp  test-tagged_ptr.cpp  test-thread-pool.cpp  test-varuint.cpp
tests/assets/: test-archive.carbon
tests/carbon/: .gitignore  CMakeLists.txt  test-abstract-type-markers.cpp  test-abstract-types-arrays.cpp  test-abstract-types-columns.cpp  test-abstract-types-objects.cpp  test-abstract-types.cpp  test-archive-converter  test-archive-converter.cpp  test-archive-iter  test-archive-iter.cpp  test-archive-ops  test-archive-ops.cpp  test-array.cpp  test-bison.cpp  test-carbon  test-carbon-patch.cpp  test-carbon-path-index.cpp  test-carbon.cpp  test-fix-map  test-fix-map.cpp  test-global_id.cpp  test-json  test-json.cpp  test-mime  test-mime.cpp  test-object-ids  test-oid.cpp  test-schema-validate.cpp  test-schema.cpp  test-uintvar-column.cpp  test-varuint  test-varuint.cpp  tmp-test-archive.jakson-tool
tests/carbon/assets/: ms-academic-graph.json  random.json
tests/misc/: CMakeLists.txt  test-fn-result.cpp  test-jak-result.cpp  test-thread-pool  test-thread-pool.cpp
tests/stdx/: test_slice_list.h  test_slot_map.c  test_string_dic.h  test_string_hashtable.c  test_string_hashtable.h  test_string_id_map.c
tmp/: bench-bucket-putget-scan-1.csv  run.sh
tools/: CMakeLists.txt
tools/carbon/: CMakeLists.txt  Makefile  cli.c  cli.h  cmake_install.cmake  main.c  modules.c  modules.h
tools/carbon/ops/: ops-count-values.c  ops-count-values.h  ops-get-citations.c  ops-get-citations.h  ops-show-keys.c  ops-show-keys.h  ops-show-values.c  ops-show-values.h
tools/jakson-tool/: CMakeLists.txt  main.c  modules.c  modules.h
tools/jakson-tool/bench/: bench_bson.c  bench_bson.h  bench_carbon.c  bench_carbon.h  bench_format_handler.c  bench_format_handler.h  bench_fwd.h  bench_ubjson.c  bench_ubjson.h
utils/: ng5_chunked_reader.c
(+2145 files in other folders)
